# pdv_api

./: .env.example  MIGRACIONES.md  README.md  database.py  dependencies.py  main.py  pyproject.toml  requirements.txt  tabla.sql
alembic/: env.py
alembic/versions/: 2b8361c2a50b_crear_tabla_de_productos.py  35c0149a8cf0_crear_tabla_unidades_de_medida.py  64e895f95ed6_crear_tabla_de_inventario.py  6c76790661bd_crear_tabla_usuarios.py  986defa70bcb_crear_tabla_de_proveedores.py  99623d1351e5_crear_tabla_categorias_de_productos.py  f46155bf380a_crear_tabla_de_metodos_de_pagos.py
dao/: __init__.py  categorias_productos.py  inventario_dao.py  metodos_pago_dao.py  productos_dao.py  proveedores_dao.py  unidades_medida_dao.py  usuario_dao.py
models/: __init__.py  categorias_productos.py  inventario.py  metodos_pago.py  productos.py  proveedores.py  safe_delete_model.py  unidades_medida.py  usuario.py
routers/: __init__.py  auth_router.py  categorias_productos.py  metodos_pago.py  productos.py  proveedores.py  unidades_medida.py  usuario.py  usuario_router.py
schemas/: __init__.py  categorias_productos.py  inventario.py  metodos_pago.py  productos.py  proveedores.py  response_model.py  unidades_medida.py  usuario.py
services/: __init__.py  auth_service.py  categorias_productos.py  main.py  metodos_pago.py  productos.py  proveedores.py  unidades_medida.py  usuario.py
utils/: __init__.py  abreviacion.py  app_exceptions.py  security.py  service_result.py
